# cv_npu

./: README.md  build.gradle  gradle.properties  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/epbox/cv_ai/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/epbox/cv_npu/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/epbox/cv_ai/: ExampleUnitTest.java
cv_aix/: build.gradle
cv_aix/src/androidTest/java/cn/epbox/cv_aix/: ExampleInstrumentedTest.java
cv_aix/src/main/: AndroidManifest.xml
cv_aix/src/main/cpp/: CMakeLists.txt
cv_aix/src/main/cpp/rknn/: native-lib-rknn.cc  yolo_image.cc  yolo_image.h
cv_aix/src/main/java/cn/epbox/cv_aix/: AiModelThreadx.java  AimodelThread.java  CvAix.java  EpboxCV.java  ImageResizeAndConvert.java  InferenceResult.java  UniqueNumbers.java
cv_aix/src/main/java/cn/epbox/cv_aix/rga/: HALDefine.java  RGA.java
cv_aix/src/main/java/cn/epbox/cv_aix/tracker/: ObjectTracker.java
cv_aix/src/main/java/cn/epbox/cv_aix/yolo/: InferenceWrapper.java  PostProcess.java
cv_aix/src/main/res/values/: strings.xml
cv_aix/src/test/java/cn/epbox/cv_aix/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
